# VCM_OS

./: .gitignore  ALPHA_COMPLETE_SUMMARY.md  AUDIT_2026-05-11_v0.6.md  DEV_LOG.md  MUTATION_LOG.json  RC4_ROADMAP.md  RC4_STATUS.md  RC5_PROGRESS.md  README.md  ROADMAP_v1.0.md  SESSION_COMPLETE_LOG_2026_05_10.md  SESSION_LOG_2026_05_10.md  VCM_OS_RESULTS.json  WHAT_IT_DOES.md  ablation_results.json  analyze_pack_data.py  benchmark_latency.py  collect_trace_data.py  component_eval_results.json  compute_semantic_metrics.py  dogfood_results.json  dogfood_vcm_os.py  e2e_benchmark_results.json  e2e_benchmark_v2_results.json  embedding_experiment_results.json  eval_manifest.json  eval_report.txt  eval_results.json  eval_results_final.json  eval_results_v1_0.json  f03_debug.json  holdout_baseline_comparison.json  holdout_diagnostic_v0.7.json  holdout_diagnostic_v0.8_final.json  holdout_restore_metrics.json  human_eval_dataset_v2.json  human_eval_interface.html  human_eval_labeled.json  human_eval_semantic.py  kimi-vcm-mcp.json  (+25 more)
docs/: DEVELOPMENT_ROADMAP.md  LINKEDIN_ARTICLE_BILINGUAL.md  RC3_SESSION_REPORT_2026_05_10.md  README.md  ablation_results.md  holdout_v0_9_comparison.json  human_eval_semantic_results.md  plan_progress_report.md  tuning_v0_9_results.json  v0_10_final_summary.md  v0_10_live_workflow.md  v0_10_results.md  v0_5_complete_log.md  v0_6_7_8_journal.md  v0_9_2_review_and_v1_0_gates.md  v0_9_complete_results.md  v1_0_final_results.md  v1_0_rc1_verdict_response.md  v1_0_rc2_roadmap.md  v1_0_rc3_sprint_plan.md  v1_0_roadmap_prompt.md
scripts/: component_eval.py  (+15 more)
(+234 files in other folders)
