[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vcm-os"
version = "0.5.0"
description = "Validated Context Memory Operating System for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=2.5.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["vcm_os*"]
